2009-09-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fixed problem with backlite (Ticket #308)

	* src/via_lvds.c: (ViaLVDSSoftwarePowerFirstSequence),
	(ViaLVDSSoftwarePowerSecondSequence),
	(ViaLVDSHardwarePowerFirstSequence),
	(ViaLVDSHardwarePowerSecondSequence), (ViaLVDSPower):

2009-09-15  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	TV-out VT1625 chip support

	* src/via_bios.h:
	* src/via_crtc.c: (ViaFirstCRTCSetMode):
	* src/via_display.c: (ViaDisplayEnableDVO), (ViaDisplayDisableDVO),
	(ViaDisplaySetStreamOnDVO):
	* src/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit):
	* src/via_mode.c: (ViaTVSetMode), (ViaOutputsSelect), (ViaModeSet):
	* src/via_vt162x.c: (ViaSetTVClockSource), (VT1622ModeI2C),
	(VT1622ModeCrtc):
	* src/via_vt162x.h:

2009-09-15  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Cursor support speedup

	* src/via_cursor.c: (viaHWCursorInit), (viaCursorStore),
	(viaCursorRestore), (viaShowCursor), (viaHideCursor),
	(viaSetCursorPosition), (viaLoadCursorImage), (viaLoadCursorARGB):

2009-09-14  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Removed two old variables:
	pBIOSInfo->panelX
	pBIOSInfo->panelY
	
	and replaced it by:
	pBIOSInfo->Panel->NativeMode->Width
	pBIOSInfo->Panel->NativeMode->Height

	* src/via_bios.h:
	* src/via_driver.c: (VIASetupDefaultOptions):
	* src/via_mode.c: (ViaPanelGetIndex), (VIASetLCDMode),
	(ViaModePrimaryLegacy), (ViaModeSecondaryLegacy):
	* src/via_swov.c: (SetVideoWindow):
	* src/via_video.c: (DecideOverlaySupport):

2009-09-10  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fix bug with DFP Power Off (ticket #317)

	* src/via_mode.c: (ViaDFPPower):

2009-08-20  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fix bug with wrong panel size value (http://www.openchrome.org/trac/ticket/301)
        This bug appeared only when UseLegacyModeSwitch was TRUE

	* src/via_driver.c: (VIASetupDefaultOptions):
	* src/via_video.c: (DecideOverlaySupport):

2009-08-17  Bartosz Kosiorek <gang65@poczta.onet.pl>
